few changes regarding looks and optimization

--- a/assets/style.css
+++ b/assets/style.css
@@ -74,6 +74,7 @@ label {
   display: block;
   margin-bottom: 10px;
   color: #fff;
+  background-color: #3d3d44;
 }
 
 input[type="text"] {
@@ -83,6 +84,7 @@ input[type="text"] {
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 10px;
+  color: #fff;
 }
 
 button {
